<resources>
    <string name="app_name">RepoStock</string>
    <string name="profile">Profile</string>
    <string name="scanner">Scanner</string>
    <string name="stock">Stock</string>
    <string name="administrative">Administrative</string>
    <string name="profile_image">profile_image</string>
    <string name="telephone_number">(+90) 555 555 5555</string>
    <string name="info_repostock_com">info@repostock.com</string>
    <string name="id">1327-A3</string>
    <string name="log_out"><u>Log Out</u></string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In!</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up"><u>Sign Up!</u></string>
    <string name="sign_up_question">Don\'t have an account?</string>
    <string name="image_auth">image_auth</string>
    <string name="product">product</string>
    <string name="stock_quantity">Stock Quantity:</string>
    <string name="stock_category">Category:</string>
    <string name="stock_price">Price:</string>
    <string name="request_stock">Request Stock</string>
    <string name="search">Search in products</string>
    <string name="kick">Kick</string>
    <string name="add_worker">Add Worker</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="mail">Mail</string>
    <string name="salary">Salary</string>
    <string name="cancel">Cancel</string>
    <string name="hire">Hire</string>
    <string name="barcode">Barcode</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete_product">Delete</string>
    <string name="list">List</string>
    <string name="pay">Pay</string>
    <string name="total">Total: 50</string>
    <string name="bring_your_credit_card_closer">Bring your credit card closer.</string>
    <string name="payment_success">Payment Success!</string>
    <string name="okey">Ok</string>
    <string name="request_list">Request List</string>
</resources>