<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_update_product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    android:padding="16dp"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <EditText
        android:id="@+id/edit_text_update_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/exo_regular"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_text_update_product_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/exo_regular"
        android:hint="@string/category"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_text_update_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/exo_regular"
        android:hint="@string/price"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_text_update_product_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/exo_regular"
        android:hint="@string/stock"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="12dp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/product_update_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_edit_text"
            android:backgroundTint="#364147"
            android:fontFamily="@font/exo_regular"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/product_update_update_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_edit_text"
            android:backgroundTint="#364147"
            android:fontFamily="@font/exo_regular"
            android:padding="12dp"
            android:text="@string/update"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/product_update_delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_edit_text"
            android:backgroundTint="#364147"
            android:fontFamily="@font/exo_regular"
            android:padding="12dp"
            android:text="@string/delete_product"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>