<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_view_bottom_product"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/profile_image"
            android:padding="4dp"
            android:src="@drawable/ic_dairy_products" />

        <TextView
            android:id="@+id/text_view_bottom_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:fontFamily="@font/exo_bold"
            android:padding="4dp"
            android:text="@string/app_name"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_bottom_product_static_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/exo_regular"
            android:padding="4dp"
            android:text="@string/stock_category"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_view_bottom_product_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/exo_regular"
            android:padding="4dp"
            android:text="@string/id"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_bottom_product_static_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/exo_regular"
            android:padding="4dp"
            android:text="@string/stock_quantity"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_view_bottom_product_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/exo_regular"
            android:padding="4dp"
            android:text="@string/id"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_bottom_product_static_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/exo_regular"
            android:padding="4dp"
            android:text="@string/stock_price"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_view_bottom_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/exo_regular"
            android:padding="4dp"
            android:text="@string/id"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp">

        <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
            android:id="@+id/aa_chart_view_daily_product_stock"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_view_product_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_edit_text"
        android:backgroundTint="#364147"
        android:fontFamily="@font/exo_regular"
        android:padding="12dp"
        android:text="@string/request_stock"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>