<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_auth"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_view_profile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/profile_image"
            android:padding="4dp"
            android:src="@drawable/ic_man_colored" />

        <TextView
            android:id="@+id/text_view_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:fontFamily="@font/exo_bold"
            android:padding="4dp"
            android:text="@string/app_name"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_image"
            android:padding="4dp"
            android:src="@drawable/ic_id" />

        <TextView
            android:id="@+id/text_view_profile_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:fontFamily="@font/exo_regular"
            android:padding="4dp"
            android:text="@string/id"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_image"
            android:padding="4dp"
            android:src="@drawable/ic_telephone" />

        <TextView
            android:id="@+id/text_view_profile_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:fontFamily="@font/exo_regular"
            android:padding="4dp"
            android:text="@string/telephone_number"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_image"
            android:padding="4dp"
            android:src="@drawable/ic_email" />

        <TextView
            android:id="@+id/text_view_profile_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:fontFamily="@font/exo_regular"
            android:padding="4dp"
            android:text="@string/info_repostock_com"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_image"
            android:padding="4dp"
            android:src="@drawable/ic_log_out" />

        <TextView
            android:id="@+id/text_view_profile_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:fontFamily="@font/exo_regular"
            android:padding="4dp"
            android:text="@string/log_out"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>